// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TableSelect render() basic 1`] = `
<div>
  <ul
    style={
      Object {
        "width": "50px",
      }
    }
  >
    <li
      key="ninety nine"
      onClick={[Function]}
      style={
        Object {
          "fontWeight": "normal",
        }
      }
    >
      ninety nine
    </li>
  </ul>
</div>
`;

exports[`TableSelect render() if 2 cols 1`] = `
<div>
  <ul
    style={
      Object {
        "width": "100px",
      }
    }
  >
    <li
      key="twenty one"
      onClick={[Function]}
      style={
        Object {
          "fontWeight": "normal",
        }
      }
    >
      twenty one
    </li>
  </ul>
</div>
`;

exports[`TableSelect render() if matched 1`] = `
<div>
  <ul
    style={
      Object {
        "width": "50px",
      }
    }
  >
    <li
      key="two"
      onClick={[Function]}
      style={
        Object {
          "fontWeight": "bold",
        }
      }
    >
      two
    </li>
  </ul>
</div>
`;
